--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch ./sass/main.scss:css/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/"
-
   },
   "repository": {
     "type": "git",
@@ -22,5 +21,8 @@
   "homepage": "https://github.com/NC81/NicolasCandeli_6_04102021#readme",
   "devDependencies": {
     "eslint": "^7.32.0"
+  },
+  "dependencies": {
+    "plyr": "^3.6.9"
   }
 }
